feat: add user management functionality with UserController and UserService